// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders patient care plan suggestion (concern) 1`] = `
<div
  className="carePlanSuggestion"
>
  <div
    className="carePlanSuggestionType"
  >
    Suggested concern
  </div>
  <div
    className="carePlanSuggestionTitleRow"
  >
    <div
      className="carePlanSuggestionConcernTitle"
    >
      Concern Title
    </div>
    <div
      className="carePlanSuggestionActionButtons"
    >
      <div
        className="rejectButton"
        onClick={[Function]}
      />
      <div
        className="acceptButton"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="carePlanSuggestionMetaRow"
  >
    <div
      className="carePlanSuggestionSmallLabel"
    >
      Suggested:
    </div>
    <div
      className="carePlanSuggestionSmallDate"
    >
      <span>
        Aug 16, 2017
      </span>
    </div>
  </div>
</div>
`;

exports[`renders patient care plan suggestion (goal) 1`] = `
<div
  className="carePlanSuggestion"
>
  <div
    className="carePlanSuggestionType"
  >
    Suggested goal
  </div>
  <div
    className="carePlanSuggestionTitleRow"
  >
    <div
      className="carePlanSuggestionGoalTitle"
    >
      Goal Title
    </div>
    <div
      className="carePlanSuggestionActionButtons"
    >
      <div
        className="rejectButton"
        onClick={[Function]}
      />
      <div
        className="acceptButton"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="carePlanSuggestionMetaRow largerMargin"
  >
    <div
      className="carePlanSuggestionSmallLabel"
    >
      Suggested:
    </div>
    <div
      className="carePlanSuggestionSmallDate"
    >
      <span>
        Aug 16, 2017
      </span>
    </div>
  </div>
  <div
    className="taskTemplateRow highPriority"
  >
    <div
      className="taskTemplateTitle"
    >
      Task Title
    </div>
    <div
      className="taskTemplateInfoControls"
    >
      <div
        className="taskTemplateAssigneeAvatar"
        style={
          Object {
            "backgroundImage": "url(https://bit.ly/2weRwJm)",
          }
        }
      />
      <div
        className="taskTemplateDueDate"
      >
        <div
          className="taskTemplateDueDateLabel"
        >
          Due:
        </div>
        <div
          className="taskTemplateDueDateText"
        >
          <span>
            Jul 26, 2017
          </span>
        </div>
      </div>
      <div
        className="taskTemplateRejectButton"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;
